# TestDelta

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
docker/init_containers/: Dockerfile.init_rabbit  Dockerfile.migrations
docker/service/: Dockerfile.delivery_calculation_worker  Dockerfile.outbox_publisher  Dockerfile.parcel_service
src/containers/: init_rabbitmq.py
src/containers/db_service/: alembic.ini  config.py
src/containers/db_service/migrations/: env.py
src/containers/db_service/sql/: engine.py  url_resolver.py
src/delivery_calculation_worker/: main.py
src/delivery_calculation_worker/core/: config.py  container.py
src/delivery_calculation_worker/db/redis/: redis.py
src/delivery_calculation_worker/db/sql/: engine.py  models.py  url_resolver.py
src/delivery_calculation_worker/messaging/: consumer.py  handle_message.py
src/delivery_calculation_worker/services/: currency.py
src/delivery_calculation_worker/strategies/: strategy.py
src/outbox_publisher/: main.py  worker.py
src/outbox_publisher/core/: config.py  container.py
src/outbox_publisher/db/: engine.py  models.py  url_resolver.py
src/outbox_publisher/messaging/: publisher.py
src/parcel_service/: main.py
src/parcel_service/api/: __init__.py
src/parcel_service/api/schemas/: analytics.py  bind_company.py  debug.py  parcel.py  parcel_types.py
src/parcel_service/core/: config.py  container.py  logging.py  openapi.py
src/parcel_service/core/exceptions/: __init__.py  handler_exceptions.py
src/parcel_service/core/metrics/: __init__.py  (+1 more)
(+42 files in other folders)
